# tudo

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  todo.rs
server/src/routes/: create_todo.rs  get_todos.rs  mod.rs  ping.rs
