[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
poem = "1.2.47"
tokio = { version = "1.15.0", features = ["full"] }
tracing-subscriber = "0.3.7"
