[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.19"
mongodb = { version = "2.1.0", features = ["tokio-runtime"] }
poem = "1.2.47"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.15.0", features = ["full"] }
tracing-subscriber = "0.3.7"
